@@ -9,36 +9,33 @@ bin_PROGRAMS = epdf_evas_test epdf_esmart_test $(EPDF_EWL_TEST)
 
 ## evas test
 
-epdf_evas_test_SOURCES = \
-epdf_evas_test.c
+epdf_evas_test_SOURCES = epdf_evas_test.c
 
 epdf_evas_test_CPPFLAGS =\
 -I$(top_srcdir)/src/lib	\
-@ECORE_EVAS_CFLAGS@ \
+@EPDFBIN_CFLAGS@ \
 @EPDF_CFLAGS@
 
 epdf_evas_test_LDADD = \
-$(top_builddir)/src/lib/libepdf.la \
-$(EPDF_LIBS) $(ECORE_EVAS_LIBS)
+$(EPDFBIN_LIBS) \
+$(top_builddir)/src/lib/libepdf.la
 
 ## esmart test
 
-epdf_esmart_test_SOURCES = \
-epdf_esmart_test.c
+epdf_esmart_test_SOURCES = epdf_esmart_test.c
 
 epdf_esmart_test_CPPFLAGS =\
 -I$(top_srcdir)/src/lib	\
-@ECORE_EVAS_CFLAGS@ \
+@EPDFBIN_CFLAGS@ \
 @EPDF_CFLAGS@
 
 epdf_esmart_test_LDADD = \
-$(top_builddir)/src/lib/libepdf.la \
-$(EPDF_LIBS) $(ECORE_EVAS_LIBS)
+$(EPDFBIN_LIBS) \
+$(top_builddir)/src/lib/libepdf.la
 
 ## ewl test
 
-epdf_ewl_test_SOURCES = \
-epdf_ewl_test.c
+epdf_ewl_test_SOURCES = epdf_ewl_test.c
 
 epdf_ewl_test_CPPFLAGS =\
 -I$(top_srcdir)/src/lib	\
